Maint: Fixed text color and added img color as black to make alt text readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,11 @@ body {
 	display: flex;
 	flex-direction: column;
 	/* Generic Project Styles */
-	color: #000000;
+	color: #f7f2cb;
 	font-family: 'poppins', sans-serif;
+}
+img {
+    color: #000000;
 }
 /* Page Backgrounds */
 .index {
